# jstation-controller

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  deny.toml
.github/workflows/: CI.yml  check_and_test.yml  clippy.yml  deny.yml  fmt.yml  package.yml
jstation_derive/: Cargo.toml
jstation_derive/src/: boolean.rs  const_range.rs  discrete.rs  lib.rs  param.rs  param_group.rs  variable_range.rs
res/: org.fengalin.jstation-controller.desktop
src/: main.rs
src/jstation/: channel_voice.rs  error.rs  interface.rs  mod.rs  sysex.rs
src/jstation/data/: mod.rs  program.rs
src/jstation/data/dsp/: amp.rs  cabinet.rs  compressor.rs  delay.rs  effect.rs  expression.rs  mod.rs  noise_gate.rs  pedal.rs  reverb.rs  utility_settings.rs  wah.rs  wah_expr.rs
src/jstation/data/parameter/: boolean.rs  const_range.rs  discrete.rs  list.rs  mod.rs  normal.rs  raw.rs  variable_range.rs
src/jstation/midi/: mod.rs  split_bytes.rs  sysex.rs
src/jstation/procedure/: bank_dump.rs  mod.rs  notify_store.rs  notify_utility.rs  one_program.rs  program_indices.rs  program_update.rs  reload_program.rs  result.rs  utility_settings.rs  who_am_i.rs
src/midi/: error.rs  mod.rs  port.rs  scanner.rs
src/midi/channel_voice/: cc.rs  mod.rs
src/ui/: amp.rs  app.rs  cabinet.rs  compressor.rs  delay.rs  effect.rs  jstation.rs  macros.rs  midi.rs  mod.rs  noise_gate.rs  port.rs  reverb.rs  style.rs  utility_settings.rs  wah_expr.rs  widget.rs
