[package]
name = "jstation-controller"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["Multimedia"]
keywords = ["guitar", "jstation"]
description = "Controller for the J-Station guitar & bass amp emulator and multi-effects unit"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fengalin/jstation-controller"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
env_logger = "0.10"
flume = "0.10.13"
futures = "0.3.25"
iced = { version = "0.6", features = [ "default_system_font", "smol" ] }
iced_audio = "0.9"
iced_core = "0.6"
iced_lazy = "0.3.0"
iced_native = "0.7"
iced_wgpu = "0.7"
jstation_derive = { path = "jstation_derive" }
log = { version = "0.4", features = ["release_max_level_info"] }
midir = "0.8"
nom = "7.1.1"
once_cell = "1.0"
smallvec = { version = "1.10", features = [ "union" ] }
smol = "1.2.5"
thiserror = "1.0"

[profile.release]
lto = true

[patch.crates-io]
iced = { git = "https://github.com/fengalin/iced", branch = "subscription-unfold-none-handling" }
iced_core = { git = "https://github.com/fengalin/iced", branch = "subscription-unfold-none-handling" }
iced_graphics = { git = "https://github.com/fengalin/iced", branch = "subscription-unfold-none-handling" }
iced_lazy = { git = "https://github.com/fengalin/iced", branch = "subscription-unfold-none-handling" }
iced_native = { git = "https://github.com/fengalin/iced", branch = "subscription-unfold-none-handling" }
iced_wgpu = { git = "https://github.com/fengalin/iced", branch = "subscription-unfold-none-handling" }
#iced = { path = "../iced" }
#iced_core = { path = "../iced/core" }
#iced_graphics = { path = "../iced/graphics" }
#iced_lazy = { path = "../iced/lazy" }
#iced_native = { path = "../iced/native" }
#iced_wgpu = { path = "../iced/wgpu" }
