[package]
name = "jstation-controller"
version = "0.3.1-99"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["Multimedia"]
keywords = ["guitar", "jstation"]
description = "Controller for the J-Station guitar & bass amp emulator and multi-effects unit"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fengalin/jstation-controller"
edition = "2021"

[dependencies]
env_logger = "0.11"
iced = { version = "0.9", features = [ "smol" ] }
iced_audio = { version = "0.12", default-features = false }
iced_lazy = "0.6.1"
iced_native = "0.10.3"
jstation_derive = { path = "jstation_derive" }
log = { version = "0.4", features = ["release_max_level_info"] }
midir = "0.9"
nom = "7.1.1"
once_cell = "1.0"
smallvec = { version = "1.10", features = [ "const_generics", "union" ] }
smol = "1.3"
thiserror = "1.0"

[features]
default = ["wgpu"]
wgpu = ["iced/wgpu", "iced_audio/wgpu"]
glow = ["iced/glow", "iced_audio/glow"]

[profile.release]
lto = true
