[package]
name = "jstation_derive"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
license = "MIT"
repository = "https://github.com/fengalin/jstation-controller"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
syn = "1.0"
proc-macro2 = "1.0.42"
proc-macro-error = "1"
quote = "1.0"
